# godot-dcparser

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: ci.yml  release.yml
project/: project.godot
project/addons/gddcparser/: gddcparser.gdextension
project/data/: example.dc
project/demo/: demo.tscn
project/scenes/: demo.gd  demo.tscn
src/: CMakeLists.txt  DCFileLoader.cpp  DCFileLoader.h  DCFileResource.cpp  DCFileResource.h  Datagram.cpp  Datagram.h  DatagramIterator.cpp  DatagramIterator.h  GDDCClass.cpp  GDDCClass.h  GDDCField.cpp  GDDCField.h  GDDCFile.cpp  GDDCFile.h  GDDCParser.cpp  GDDCParser.h  GDDCUtils.cpp  GDDCUtils.h  RegisterExtension.cpp  UniqueIdAllocator.cpp  UniqueIdAllocator.h
src/dclass/: CMakeLists.txt
